Change to prevent long unbroken text (such as one of those dreadful google maps links) screwing up the activity display, browsers without support for the 'word-wrap' css rule (i.e. non-webkit) however get a horizontal scrollbar.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,7 @@ div.activity_container {
 
 div#activity {
   margin-bottom: 6px;
+  word-wrap: break-word;
 }
 
 div.scrollable {
